--- a/css/fonts.css
+++ b/css/fonts.css
@@ -3,7 +3,7 @@
   font-family: 'Inter';
   font-style: normal;
   font-weight: 300;
-  font-display: swap;
+  font-display: optional;
   src: url('../fonts/inter/inter-300.woff2') format('woff2');
 }
 
@@ -11,7 +11,7 @@
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
-  font-display: swap;
+  font-display: optional;
   src: url('../fonts/inter/inter-400.woff2') format('woff2');
 }
 
@@ -19,7 +19,7 @@
   font-family: 'Inter';
   font-style: normal;
   font-weight: 500;
-  font-display: swap;
+  font-display: optional;
   src: url('../fonts/inter/inter-500.woff2') format('woff2');
 }
 
@@ -27,6 +27,6 @@
   font-family: 'Inter';
   font-style: normal;
   font-weight: 600;
-  font-display: swap;
+  font-display: optional;
   src: url('../fonts/inter/inter-600.woff2') format('woff2');
 } 
